--- a/.github/workflows/compilers.yml
+++ b/.github/workflows/compilers.yml
@@ -29,7 +29,7 @@ jobs:
           - {os: windows-latest, compiler: gcc, version: 13, shell: pwsh, release: no}
           # test intel-classic
           - {os: ubuntu-22.04, compiler: intel-classic, version: 2021.7, shell: bash, release: no}
-          - {os: macos-13, compiler: intel-classic, version: 2021.6, shell: bash, release: yes}
+          - {os: macos-15-intel, compiler: intel-classic, version: 2021.6, shell: bash, release: yes}
           # test previous gcc
           - {os: ubuntu-latest, compiler: gcc, version: 12, shell: bash, release: no}
           - {os: ubuntu-latest, compiler: gcc, version: 11, shell: bash, release: no}
@@ -44,11 +44,6 @@ jobs:
         uses: actions/checkout@v5
         with:
           path: ${{ env.PROGRAM_NAME }}
-
-      - uses: maxim-lobanov/setup-xcode@v1
-        if: ${{ (runner.os == 'macOS') && (matrix.compiler == 'intel-classic') }}
-        with:
-          xcode-version: "14.3.1"
 
       - name: Setup ${{ matrix.compiler }} ${{ matrix.version }} on ${{ matrix.os }}
         uses: fortran-lang/setup-fortran@v1
